# bukowski_3d

./: .gitignore  DOCKER.md  Dockerfile  README.md  bukowski_3d.ipynb  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
bukowski_3d/: __init__.py  main.py
docs_mkdocs/: api.md  index.md  usage.md
docs_sphinx/: conf.py  index.rst
gui/: gradio_app.py  streamlit_app.py
tests/: test_main.py
